--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ android:
     - tools
     - platform-tools
     - tools
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 before_script:
   - chmod +x gradlew
