--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: android
 android:
   components:
     - tools
-    - build-tools-25.0.2
+    - build-tools-26.0.2
     - platform-tools
+    - android-26
     - tools
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
