--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ android:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+    - sys-img-armeabi-v7a-android-23
 before_script:
   - chmod +x gradlew
