--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,28 @@
 language: android
+jdk: oraclejdk8
+sudo: false
+
 android:
   components:
+    - platform-tools
     - tools
     - build-tools-26.0.2
-    - platform-tools
     - android-26
-    - tools
+    - android-24
+    - sys-img-armeabi-v7a-android-22
+    - extra-android-m2repository
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
-    - sys-img-armeabi-v7a-android-23
-before_script:
+before_install:
   - chmod +x gradlew
+
+before_script:
+  # Create and start emulator
   - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+
+script: ./gradlew connectedAndroidTest
