--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
     - build-tools-26.0.2
     - android-26
     - android-24
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-addon-google_apis-google-26
     - extra-android-m2repository
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
@@ -20,7 +20,7 @@ before_install:
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
